cks/topic-1/nginx-app.yaml
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: network-policy-1
  labels:
    namespace: network-policy-1
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v1
  name: nginx-app-v1
  namespace: network-policy-1
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx-app
    resources: {}
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
status: {}
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v2
  name: nginx-app-v2
  namespace: network-policy-1
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx-app
    resources: {}
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v1
  name: nginx-app-v1
  namespace: network-policy-1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-app-v1
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v2
  name: nginx-app-v2
  namespace: network-policy-1
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-app-v2
---
apiVersion: v1
kind: Namespace
metadata:
  creationTimestamp: null
  name: network-policy-2
  labels:
    namespace: network-policy-2
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v3
  name: nginx-app-v3
  namespace: network-policy-2
spec:
  volumes:
  - name: html
    emptyDir: {}
  containers:
  - image: nginx
    name: nginx-app
    resources: {}
    volumeMounts:
    - name: html
      mountPath: /usr/share/nginx/html
status: {}
---
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  labels:
    run: nginx-app-v3
  name: nginx-app-v3
  namespace: network-policy-2
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx-app-v3
